--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -35,14 +35,38 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [8.1,8.2, 8.3, 8.4]
-        laravel: [^10.40, ^11.34, ^12.0]
         include:
-          - laravel: ^10.40
+          # Laravel 10 supports PHP 8.1 to 8.3
+          - php: 8.1
+            laravel: ^10.40
             testbench: 8.*
-          - laravel: ^11.34
+          - php: 8.2
+            laravel: ^10.40
+            testbench: 8.*
+          - php: 8.3
+            laravel: ^10.40
+            testbench: 8.*
+          
+          # Laravel 11 supports PHP 8.2 to 8.4
+          - php: 8.2
+            laravel: ^11.34
             testbench: 9.*
-          - laravel: ^12.0
+          - php: 8.3
+            laravel: ^11.34
+            testbench: 9.*
+          - php: 8.4
+            laravel: ^11.34
+            testbench: 9.*
+          
+          # Laravel 12 supports PHP 8.2 to 8.4
+          - php: 8.2
+            laravel: ^12.0
+            testbench: 10.*
+          - php: 8.3
+            laravel: ^12.0
+            testbench: 10.*
+          - php: 8.4
+            laravel: ^12.0
             testbench: 10.*
     name: Tests PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
 
